@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = 1.4 foreign
 
-INCLUDES = -I. -I$(top_srcdir)
+AM_CPPFLAGS = -I. -I$(top_srcdir)
 
 EXTRA_DIST = \
 	alloca.c	basename.c	err.c		error.c		\
