@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - rse: cleanup Automake specifications replace old-style INCLUDES with AM_CPPFLAGS
     - rse: allow one to control/override the /usr/lib64 use via Autoconf option --enable-build-lib64
     - rse: rename Autoconf --enable-ld-version-script to --enable-build-versionscript for consistency reasons
     - rse: make PIC/PIE/warnings build flags controllable via Autoconf --enable-build-{pic,pie,warnings}
